// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls an onClick function 1`] = `
<div
  class="Card Card--padding-default Card--is-interactive"
  data-test-id="cf-ui-card"
  tabindex="0"
>
  Card
</div>
`;

exports[`can be selected 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Card Card--padding-default Card--is-selected"
        data-test-id="cf-ui-card"
      >
        Card
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Card Card--padding-default Card--is-selected"
      data-test-id="cf-ui-card"
    >
      Card
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`has an "is-interactive" class if has an onClick prop 1`] = `
<a
  class="Card Card--padding-default Card--is-interactive"
  data-test-id="cf-ui-card"
  href="/"
>
  Card
</a>
`;

exports[`renders as a link if passed a href prop 1`] = `
<a
  class="Card Card--padding-default Card--is-interactive"
  data-test-id="cf-ui-card"
  href="/"
>
  Card
</a>
`;

exports[`renders the component 1`] = `
<div
  class="Card Card--padding-default"
  data-test-id="cf-ui-card"
>
  Card
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Card my-extra-class Card--padding-default"
  data-test-id="cf-ui-card"
>
  Card
</div>
`;
